# personal-portfolio

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  compile.bat  compile.sh  compose.yaml  custom_shell_file.html  index.data  index.html  index.js  index.wasm  nginx.conf  requirements.txt  wasm_output.html  wasm_output.js  wasm_output.wasm
.github/workflows/: azure-static-web-apps-delightful-coast-02690ef0f.yml  azure-static-web-apps-proud-glacier-0b9145e0f.yml  ci.yaml  deploy.yaml  health_test.yaml
assets/: headshot.avif  portfolio.avif  server.avif
html/: gis-technician.html  test.html
src/: Button.cpp  Button.h  Config.h  Core.cpp  Core.h  DirButton.cpp  FileButton.cpp  TabButton.cpp  Timer.cpp  Timer.h
static/: background.css  bare-metal-server.html  cloud-engineer.html  cloud-resume-challenge.html  cloud-resume.html  current-projects.html  gis-technician.html  home-lab.html  home-server.html  index.data  index.js  index.wasm  job-style.css  main.css  portfolio.html  project-style.css  pyvidplayer2.html  readme-style.css  readme.html  research-assistant.html  research-intern.html  resume-style.css  resume.html  style1.css  style2.css  testmycs.html  volume-cleaner.html
static/assets/: testmycs.avif  volume_cleaner.avif
static/css/: job-style.css  project-style.css  readme-style.css  resume-style.css
templates/: cloud-engineer.html  gis-technician.html  home-lab.html  index.html  job.html  portfolio.html  project.html  pyvidplayer2.html  readme.html  research-intern.html  resume.html  testmycs.html  volume-cleaner.html
